<resources>
    <string name="app_name">ControleFinanceiro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_listacontas">Lista de Contas</string>
    <string name="menu_tiposlancamento">Tipos de lançamentos</string>
    <string name="menu_lancamento">Lançamentos</string>
    <string name="menu_pesquisa">Pesquisa ação</string>

    <string name="txt_contas">Contas</string>
    <string name="txt_conta">Conta</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_capturar_imagem">Caputrar imagem</string>
    <string name="txt_tipolancamento">Tipo de lançamento</string>
    <string name="txt_lancamento">Lançamento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>