<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lista_contas_fragment">

    <fragment
        android:id="@+id/nav_lista_contas_fragment"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.ListarContaFragment"
        android:label="@string/menu_listacontas"
        tools:layout="@layout/fragment_listar_conta" />

    <fragment
        android:id="@+id/nav_lista_tiposlancamentos"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.ListarTipoLancamentoFragment"
        android:label="@string/menu_tiposlancamento"
        tools:layout="@layout/fragment_listar_tipo_lancamento" />

    <fragment
        android:id="@+id/nav_lista_lancamentos"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.ListarLancamentoFragment"
        android:label="@string/menu_lancamento"
        tools:layout="@layout/fragment_listar_lancamento" />

    <fragment
        android:id="@+id/nav_pesquisa_acao"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.PesquisaAcaoFragment"
        android:label="@string/menu_pesquisa"
        tools:layout="@layout/fragment_pesquisa_acao" />

    <fragment
        android:id="@+id/nav_cadastrar_conta"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.CadastrarContaFragment"
        android:label="@string/menu_listacontas"
        tools:layout="@layout/fragment_cadastrar_conta" />

    <fragment
        android:id="@+id/nav_cadastrar_tipo_lancamento"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.CadastrarTipoLancamentoFragment"
        android:label="@string/menu_tiposlancamento"
        tools:layout="@layout/fragment_cadastrar_tipo_lancamento" />

    <fragment
        android:id="@+id/nav_cadastrar_lancamento"
        android:name="br.udesc.ddm.controlefinanceiro.ui.fragments.CadastrarLancamentoFragment"
        android:label="@string/menu_lancamento"
        tools:layout="@layout/fragment_cadastrar_lancamento" />

    <activity
        android:id="@+id/nav_detalhes_conta"
        android:name="br.udesc.ddm.controlefinanceiro.ui.activity.DetalhesContaActivity"
        android:label="Detalhes contas"
        tools:layout="@layout/activity_detalhes_conta" />

    <activity
        android:id="@+id/nav_detalhes_tipo_lancamento"
        android:name="br.udesc.ddm.controlefinanceiro.ui.activity.DetalhesTipoLancamentoActivity"
        android:label="Detalhes tipo lançamento"
        tools:layout="@layout/activity_detalhes_tipo_lancamento" />

    <activity
        android:id="@+id/nav_detalhes_lancamento"
        android:name="br.udesc.ddm.controlefinanceiro.ui.activity.DetalhesLancamentoActivity"
        android:label="Detalhes lançamento"
        tools:layout="@layout/activity_detalhes_lancamento" />

</navigation>