<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CadastrarLancamentoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_lancamento"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_cadastro_lancamento_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_lancamento"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_cadastro_lancamento_textinput_valor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_lancamento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_cadastro_lancamento_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Valor"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_banco_sugerido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Conta"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/fragment_cadastro_lancamento_textinput_valor"
        app:layout_constraintTop_toBottomOf="@id/fragment_cadastro_lancamento_textinput_valor"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="84dp" />

    <Spinner
        android:id="@+id/spConta"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_lancamento"
        app:layout_constraintStart_toStartOf="@id/txt_banco_sugerido"
        app:layout_constraintTop_toBottomOf="@id/txt_banco_sugerido"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_tipogasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Tipo de gasto"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/spConta"
        app:layout_constraintTop_toBottomOf="@id/spConta"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="84dp" />

    <Spinner
        android:id="@+id/spTipoGasto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_lancamento"
        app:layout_constraintStart_toStartOf="@id/txt_tipogasto"
        app:layout_constraintTop_toBottomOf="@id/txt_tipogasto"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/fragment_formulario_lancamento_botao_salvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/spTipoGasto"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_lancamento"
        app:layout_constraintTop_toBottomOf="@id/spTipoGasto"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/fragment_formulario_lancamento_botao_capturar_imagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_capturar_imagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fragment_formulario_lancamento_botao_salvar"
        app:layout_constraintStart_toStartOf="@id/fragment_formulario_lancamento_botao_salvar"
        app:layout_constraintTop_toBottomOf="@id/fragment_formulario_lancamento_botao_salvar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="550dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/fragment_formulario_lancamento_botao_capturar_imagem"
        app:layout_constraintTop_toBottomOf="@id/fragment_formulario_lancamento_botao_capturar_imagem" />

    <ImageView
        android:id="@+id/image_view_foto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/fragment_formulario_lancamento_botao_capturar_imagem"
        app:layout_constraintTop_toBottomOf="@id/fragment_formulario_lancamento_botao_capturar_imagem" />

</androidx.constraintlayout.widget.ConstraintLayout>